--- a/.github/workflows/build-docker-image.yml
+++ b/.github/workflows/build-docker-image.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
         - main
+  workflow_dispatch:
 
 env:
     DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
@@ -12,7 +13,6 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
